@@ -23,6 +23,7 @@ Verilator 4.215 devel
 * Fix split_var assign merging (#3177) (#3179). [Yutetsu TAKATSUKASA]
 * Fix nested generate if genblk naming (#3189). [yanx21]
 * Fix display of empty string constant (#3207). [Julie Schwartz]
+* Fix %0 format on $value$plusargs.
 
 
 Verilator 4.214 2021-10-17
